# black-disable-checker

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg  setup.py  tbump.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yaml
black_disable_checker/: __main__.py
tests/: fixture.py  fixture_fmt_off.py  fixture_fmt_off_no_space.py  fixture_fmt_skip.py  fixture_fmt_skip_no_space.py  fixture_multiple.py  fixture_yapf_disable.py  test_integration.py
