[metadata]
author = Pierre Sassoulas
author_email = pierre.sassoulas@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
name = black-disable-checker
version = 1.1.4
description = That little door knob on your blackened bike shed can also be any color you like; as long as it's black.
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 5 - Production/Stable
url = https://github.com/Pierre-Sassoulas/black-disable-checker/
[options.entry_points]
console_scripts =
    black-disable-checker=black_disable_checker.__main__:main

[options.extras_require]
test =
    pytest-cov
    pytest-vcr
    coverage
    python-coveralls
    coveralls
    pylint~=3.0.3
    pre-commit
    tbump
